# book-async-rust

./: .gitignore  Cargo.toml  README.md
scripts/: ch01-prep.sh  ch01-run.sh  ch01-time.sh
src/: lib.rs  main.rs
src/ch01/: mod.rs
src/ch01/fibonacci/: mod.rs
src/ch01/http/: mod.rs
src/ch10/: counting_future.rs  data.rs  executor.rs  mod.rs  sleep.rs  task.rs  tcp_receiver.rs  tcp_sender.rs  waker.rs
src/ch10/executor/: mod.rs
src/ch11_p219_performing/: async_process.rs  mod.rs
src/ch11_p222_mocking/: async_process.rs  mod.rs
src/ch11_p225_testing/: mod.rs
src/ch11_p227_testing/: mod.rs
src/ch11_p229_testing/: mod.rs
src/ch11_p231_testing/: mod.rs
src/ch11_p233_fine_grained/: mod.rs
tests/: ch10-p197-setting.rs  ch10-p200-building.rs
