[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the book 'Async Rust' by Flitton & Morton"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-async-rust"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-async-rust"
rust-version = "1.86.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
async-task = "4.7.1"
flume = "0.11.1"
futures-lite = "2.6.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
