[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the book 'Async Rust' by Flitton & Morton"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-async-rust"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-async-rust"
rust-version = "1.86.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
anyhow = "1.0.98"
async-native-tls = "0.5.0"
async-task = "4.7.1"
clearscreen = "2.0.1"
device_query = "1.1.3"
flume = "0.11.1"
futures = "0.3.28"
futures-lite = "2.6.0"
futures-util = "0.3.31"
http = "1.3.1"
# TODO: Update hyper to the latest version
hyper = { version = "0.14", features = ["http1", "http2", "client", "runtime"] }
mio = { version = "1.0.4", features = ["net", "os-poll"] }
rand = "0.9.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol = "2.0.2"
tokio = { version = "1.45.1", features = ["full"] }

[profile.dev]
debug = "line-tables-only"
